Fix footer padding on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,7 +48,6 @@
   --z-fixed: 100;
 }
 
-/* Responsive typography */
 @media screen and (min-width: 968px) {
   :root {
     --big-font-size: 3.5rem;
@@ -85,7 +84,6 @@ body {
   background-color: var(--body-color);
   color: var(--text-color);
   transition: .4s;
-  /*For animation dark mode*/
 }
 
 button {
@@ -137,11 +135,6 @@ body.dark-theme {
   column-gap: 1rem;
 }
 
-/*==========
-Color changes in some parts of
-the website, in dark theme
-==========*/
-
 .dark-theme .steps__bg,
 .dark-theme .questions {
   background-color: var(--first-color-dark);
@@ -184,7 +177,6 @@ the website, in dark theme
 
 .main {
   overflow: hidden;
-  /*For animation*/
 }
 
 /*=============== HEADER ===============*/
@@ -196,7 +188,6 @@ the website, in dark theme
   left: 0;
   z-index: var(--z-fixed);
   transition: .4s;
-  /*For animation dark mode*/
 }
 
 /*=============== NAV ===============*/
@@ -798,7 +789,7 @@ the website, in dark theme
   text-align: center;
   font-size: var(--smaller-font-size);
   color: var(--text-color-light);
-  margin: 5rem 0 1rem;
+  margin: 5rem 5rem 1rem;
 }
 
 /*=============== SCROLL UP ===============*/
